# si-kost-admin

./: .gitignore  README.md  build-css.cjs  my-release-key.keystore  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: auth.rs  kamar.rs  keuangan.rs  kontak.rs  mod.rs  penghuni.rs  rumah.rs  unit.rs
src/css/: _base.css  _cards.css  _components.css  _pages.css  desktop.css  mobile.css  styles.bundle.css  styles.bundle.min.css  styles.css
src/js/core/: api.js  auth.js  cache.js  theme.js  utils.js
src/js/pages/: add-kamar.js  add-kontak.js  add-kost.js  add-penghuni-kamar.js  add-penghuni.js  detail-kamar.js  detail-kontak.js  detail-kost.js  edit-kamar.js  edit-kontak.js  edit-penghuni-kamar.js  edit-rumah.js  index.js  keuangan.js  kontak-penghuni.js  login.js  pindah-kamar.js  settings.js  unit.js
src/js/ui/: clock.js  date-picker.js  dropdown.js  image-picker.js  modal.js  sidebar-nav.js  toast.js
src/page/: add_kamar_kost.html  add_kontak_penghuni.html  add_kost.html  add_penghuni_kamar.html  detail_kamar.html  detail_kontak_penghuni.html  detail_kost.html  edit_kamar_kost.html  edit_kontak_penghuni.html  edit_penghuni_kamar.html  edit_rumah_kost.html  keuangan.html  kontak_penghuni.html  login.html  pindah_kamar.html  settings.html  unit.html
